# animated-barnacle

./: frames_2025-04-14_17.07.40.gv  frames_2025-04-15_16.22.07.gv  frames_2025-04-16_09.02.46.gv  frames_2025-04-16_09.11.19.gv  frames_2025-04-17_14.21.58.gv  frames_2025-06-24_10.45.01.gv  pc2_sample.yaml
install/my_robot_gazebo/share/my_robot_gazebo/: local_setup.sh  package.sh  package.xml
install/my_robot_gazebo/share/my_robot_gazebo/urdf/: my_robot.urdf
install/my_robot_sim/share/my_robot_sim/: package.dsv  package.ps1  package.sh
install/ndt_omp_ros2/lib/ndt_omp_ros2/: align
install/ndt_omp_ros2/share/ndt_omp_ros2/: local_setup.sh  package.sh
install/omo_r1mini_bringup/share/omo_r1mini_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/my_robot_gazebo/: CMakeLists.txt
src/my_robot_gazebo/launch/: control_only.launch.py  my_world.launch.py
src/my_robot_gazebo/worlds/: my_world.world
src/my_robot_sim/: setup.py
src/my_robot_sim/config/: robot_controllers.yaml  slam_toolbox_params.yaml
src/my_robot_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_sim/install/my_robot_sim/share/my_robot_sim/: package.sh  package.xml
src/my_robot_sim/launch/: launch_sim.launch.py
src/my_robot_sim/log/: latest_build
src/my_robot_sim/models/lidar_tank/: model.config  model.sdf
src/my_robot_sim/my_robot_sim/: pointcloud_to_scan.py
src/my_robot_sim/urdf/: lidar_tank.urdf  lidar_tank.xacro
src/omo_r1mini_bringup/: CMakeLists.txt
(+4 files in other folders)
